Code cleanup and little documentation